# gst-plugin-lumenera

./: COPYING  Makefile  README  configure.ac
src/: Makefile  Makefile.am  gstlumenerasrc.c  gstlumenerasrc.h  gstplugin.c  lucamTypes.h  lucamapi.h  lucamerr.h
src/.deps/: liblumeneraplugin_la-gstlumenerasrc.Plo  liblumeneraplugin_la-gstplugin.Plo
